fix box titles when screen is too small. (provisorical)

--- a/assets/less/base/ui/box.less
+++ b/assets/less/base/ui/box.less
@@ -62,6 +62,10 @@
 	padding: 0 1%;
 	line-height: 30px;
 	&:extend(.box-fix);
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	max-width: 100%;
+	overflow: hidden;
 	@media @mobile {
 		line-height: 50px;
 	}
@@ -101,6 +105,10 @@
 		content: "";
 		margin-left: 5px;
 	}
+}
+.box-header--content .box-header-title {
+	float: none;
+	padding: 0;
 }
 .box-header--noBorder {
 	border-top: none;
